# wrd

./: .gitignore  Cargo.toml  rustfmt.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  test-lint.yml
.zed/: settings.json
src/: data.rs  lib.rs  main.rs  match_pattern.rs  match_words.rs  matcher.rs  notwordle.rs  util.rs
wrd/: Cargo.toml
wrd-lib/: Cargo.toml  gwicks_dictionaries.txt
wrd-lib/data/: words-gwicks-usa2.txt
wrd-lib/src/: data.rs  lib.rs  match_words.rs  notwordle.rs  util.rs
wrd-tui/: Cargo.toml
wrd-tui/src/: app.rs  lib.rs  main.rs  state.rs
wrd-tui/src/app_tabs/: match_word.rs  match_words.rs  mod.rs  not_wordle.rs  settings.rs
wrd-tui/src/widgets/: mod.rs  word_grid.rs
wrd/src/: lib.rs  main.rs
