[package]
name = "wrd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
